# python-matrix-rmapi

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  README.rst  pyproject.toml
.github/workflows/: build.yml
docker/: container-init.sh  entrypoint-dev.sh  entrypoint.sh
src/matrixrmapi/: __init__.py  app.py  config.py  console.py
src/matrixrmapi/api/: __init__.py  admininfo.py  description.py  healthcheck.py  instructions.py  usercrud.py
src/matrixrmapi/templates/: admininfo.html  clientinfo.html
src/rmfpapi/: __init__.py  console.py
src/rmfpapi/api/: clientinfo.py  description.py  userinfo.py
tests/: conftest.py  test_description.py  test_fragment.py  test_matrixrmapi.py
ui/: .eslintrc.cjs  .prettierignore  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/src/: App.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
ui/src/components/: OnboardingGuide.tsx
ui/src/components/ui/: dialog.tsx
ui/src/hooks/helpers/: useHealthcheck.ts
ui/src/lib/: metadata.tsx
ui/src/locales/: en.json  fi.json  sv.json
ui/src/pages/: HomePage.tsx
